--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "produccion-web",
+  "name": "frontend",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
+    "vue": "^3.3.4",
     "axios": "^1.4.0"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "vite": "^4.3.9",
+    "@vitejs/plugin-vue": "^4.2.3"
   }
 }
