--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "axios": "^1.4.0"
   },
   "devDependencies": {
-    "vite": "^4.3.9",
-    "@vitejs/plugin-vue": "^4.2.3"
+    "vite": "^4.3.9"
   }
 }
